--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   },
   "homepage": "https://github.com/AJHenry/yam-backend#readme",
   "dependencies": {
+    "apollo-server-express": "^2.3.1",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dot-env": "0.0.1",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
     "graphql": "^14.0.2",
