--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
     "graphql": "^14.0.2",
+    "graphql-iso-date": "^3.6.1",
     "graphql-server-express": "^1.4.0",
     "graphql-tools": "^4.0.3",
     "mongoose": "^5.4.0",
