--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
   "homepage": "https://github.com/AJHenry/yam-backend#readme",
   "dependencies": {
     "apollo-server-express": "^2.3.1",
-    "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dot-env": "0.0.1",
     "dotenv": "^6.2.0",
@@ -35,7 +34,10 @@
     "graphql-iso-date": "^3.6.1",
     "graphql-server-express": "^1.4.0",
     "graphql-tools": "^4.0.3",
+    "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "pg-promise": "^8.5.4"
   },
   "devDependencies": {
