--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "yam-backend",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"No Tests Yet\"",
     "start": "nodemon ./index.js --exec babel-node -e js"
   },
   "husky": {
