--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "graphql-tools": "^4.0.3",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.0",
+    "nodemon": "^1.18.10",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "pg-promise": "^8.5.4"
