--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
   "homepage": "https://github.com/AJHenry/yam-backend#readme",
   "dependencies": {
     "apollo-server-express": "^2.3.1",
+    "aws-sdk": "^2.406.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-0": "^6.24.1",
     "cors": "^2.8.5",
     "dot-env": "0.0.1",
     "dotenv": "^6.2.0",
@@ -36,13 +40,11 @@
     "graphql-tools": "^4.0.3",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.0",
+    "nanoid": "^2.0.1",
     "nodemon": "^1.18.10",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "pg-promise": "^8.5.4",
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-0": "^6.24.1"
+    "pg-promise": "^8.5.4"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
